# mkdocs-click-zoom

./: .gitignore  CHANGELOG.md  README.md  mkdocs-click-zoom-plugin.md  pyproject.toml
.devcontainer/: devcontainer.json
src/mkdocs_click_zoom/: __init__.py  plugin.py
src/mkdocs_click_zoom/assets/: click-zoom.css  click-zoom.js
tests/: conftest.py  test_plugin.py
tests/fixtures/minimal-site/: mkdocs.yml
tests/fixtures/minimal-site/docs/: index.md
