[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-click-zoom"
version = "0.1.0"
description = "Click-to-fullscreen zoom overlay for diagrams and SVGs in MkDocs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ff-fab" }]
keywords = ["mkdocs", "mermaid", "zoom", "plugin", "diagrams", "svg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = ["mkdocs>=1.6"]

[project.entry-points."mkdocs.plugins"]
click-zoom = "mkdocs_click_zoom.plugin:ClickZoomPlugin"

[project.urls]
Homepage = "https://github.com/ff-fab/mkdocs-click-zoom"
Repository = "https://github.com/ff-fab/mkdocs-click-zoom"
Issues = "https://github.com/ff-fab/mkdocs-click-zoom/issues"

[tool.hatch.build.targets.sdist]
include = ["src/mkdocs_click_zoom/"]

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_click_zoom"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
